-- Use security manager
KTI-2206